# Gravity_Simulator

./: .gitattributes  .gitignore  CMakeLists.txt
dependencies/include/glad/: glad.h
src/: Object.cpp  Object.h  Planets.cpp  Planets.h  Planets.hpp  config.cpp  config.h  glad.c  main.cpp
